--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
       <div id="root"></div>
-  <script type="text/javascript" src="/runtime.47890c36de519d25c947.js"></script><script type="text/javascript" src="/vendors.97602cfb2dea02571970.js"></script><script type="text/javascript" src="/main.c40504a2bc76e3ae83c0.js"></script></body>
+  <script type="text/javascript" src="/react-cms/runtime.11e4e727d9152e08c8dc.js"></script><script type="text/javascript" src="/react-cms/vendors.97602cfb2dea02571970.js"></script><script type="text/javascript" src="/react-cms/main.c40504a2bc76e3ae83c0.js"></script></body>
 </html>
