--- a/index.html
+++ b/index.html
@@ -2,25 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" media="screen" type="text/css" href="css/admin.css" />
 <title>MyCorp Admin System</title>
 </head>
 
 <body>
     <div id="page-wrapper">
         <div id="hormenu">
-        <h1>MyCorp Admin System</h1>
-        <ul>
-            <li><a href="#">Case Studies</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#" class="active">Vacancies</a>							</li>
-        </ul>
+            <h1>MyCorp Admin System</h1>
+            <ul>
+                <li><a href="#" onclick="return false;" class="active">Vacancies</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div id="root"></div>
+        </div>
+        <div class="page-footer"></div>	
     </div>
-    <div class="logout"></div>
-    <div class="content">
-		<div id="root"></div>
-	</div>
-	<div class="page-footer"></div>	
-</div>
-<script type="text/javascript" src="/react-cms/runtime.76cc5f07521d3aecfe4f.js"></script><script type="text/javascript" src="/react-cms/vendors.7985ce577f40e0ca619c.js"></script><script type="text/javascript" src="/react-cms/main.85c1a5ea9574a2ae00e1.js"></script></body>
+<script type="text/javascript" src="/react-cms/runtime.76cc5f07521d3aecfe4f.js"></script><script type="text/javascript" src="/react-cms/vendors.72a06da09af9a3beebbe.js"></script><script type="text/javascript" src="/react-cms/main.9bff7a5284ba971b72e4.js"></script></body>
 </html>
