--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>MyCorp Admin System</title>
-</head>
-
-<body>
-    <div id="page-wrapper">
-        <div id="hormenu">
-            <h1>MyCorp Admin System</h1>
-            <ul>
-                <li><a href="#" onclick="return false;" class="active">Vacancies</a></li>
-            </ul>
-        </div>
-        <div class="content">
-            <div id="root"></div>
-        </div>
-        <div class="page-footer"></div>	
-    </div>
-<script type="text/javascript" src="/react-cms/runtime.76cc5f07521d3aecfe4f.js"></script><script type="text/javascript" src="/react-cms/vendors.72a06da09af9a3beebbe.js"></script><script type="text/javascript" src="/react-cms/main.9bff7a5284ba971b72e4.js"></script></body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>React + Redux CMS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  <script type="text/javascript" src="/react-cms/runtime.76cc5f07521d3aecfe4f.js"></script><script type="text/javascript" src="/react-cms/vendors.daa1239db5b223064ba9.js"></script><script type="text/javascript" src="/react-cms/main.2ec80be3bd11b6181863.js"></script></body>
 </html>
